--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -14,12 +14,19 @@
     <table> 
     {%for item in items %}
         <tr>
-            <td>{{item.name}}       </td>
-             <td>{{item.done}}       </td>
+        {% if item.done %}
+            <td> <strike> {{item.name}} </strike>      </td>
+            
+        {%else%}
+            <td>{{item.name}}       </td>            
+        {% endif %}           
     
          </tr>
+    {%empty%}
+    <tr><td> You have nothing to dp.</td></tr>
 
     {%endfor%}  
     </table>
+    <a href="/add">Add an item</a>
 </body>
 </html>
