--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -24,6 +24,12 @@
                 <a href="/edit/{{item.id}}">
                     <button>Edit</button>
                 </a>
+                 <a href="/toggle/{{item.id}}">
+                    <button>Toggle</button>
+                </a>
+                 <a href="/delete/{{item.id}}">
+                    <button>Delete</button>
+                </a>
             </td>         
     
          </tr>
